# libmodman

./: Makefile  README.md  libmodman.spec
src/: CMakeLists.txt  INSTALL  NEWS
src/cmake/: cpack.cmk
src/libmodman/: CMakeLists.txt  Findlibmodman.cmake.in  libmodman-2.0.pc.in
